2001-07-23  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_table_goto_0_0): fixed loop
	condition
	(html_engine_table_goto_0_0): renamed, exported
	(html_engine_table_goto_col): likewise
	(html_engine_table_goto_row): likewise
	(html_engine_table_goto_pos): likewise

2001-07-20  Radek Doulik  <rodo@ximian.com>

	* htmlcursor.c: reverted ettore's revert of begin/end line
	enhancement for table cells, because otherwise it breaks prev/next
	cell methods. I hope to consult that with ettore to find out
	solution for his "cursor is going outside document range" problem

	* htmlengine-edit-table.c (goto_col): new helper function
	(goto_row): likewise
	(goto_begin): likewise
	(html_engine_table_set_rows): new method
	(html_engine_table_set_cols): new method

	* htmlengine-edit.c (html_engine_next_cell): new function,
	extracted
	(html_engine_prev_cell): new function, extracted

2001-07-19  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-stream.c (gtk_html_stream_new): add a types function
	that returns the supported content types on the stream.  Now it is
	possible for the app to figure out wether or not it should wrap
	image data in html for display.
	(stream_log_types): add a log implementation of the types function.
	(gtk_html_stream_log_new): take an already existing stream instead
	of all the component parts, this makes it slightly easier to log
	random streams.
	(gtk_html_stream_get_types): get the supported content types of a
	given stream.

	* gtkhtml-stream.h: add gtk_html_stream_get_types and fixup other
	prototypes.

	* gtkhtml-types.h: add GtkHTMLStreamTypesFunc typedef.

	* htmlengine.c (html_engine_stream_types): add engine
	stream_types.
	(html_engine_stream_write): renamed from html_engine_write.
	(html_engine_strean_end): renamed from html_engine_end.
	(html_engine_begin): use the reworked html_stream_log_new function.

	* htmlimage.c (html_image_factory_types): add a simple stream type
	function.